--- a/.gitmodules
+++ b/.gitmodules
@@ -46,3 +46,6 @@
 [submodule "vim/.vim/bundle/ruby-endwise"]
 	path = vim/.vim/bundle/ruby-endwise
 	url = git://github.com/tpope/vim-endwise.git
+[submodule "vim/.vim/bundle/vim-colors-solarized"]
+	path = vim/.vim/bundle/vim-colors-solarized
+	url = git://github.com/altercation/vim-colors-solarized.git
