--- a/.gitmodules
+++ b/.gitmodules
@@ -61,6 +61,7 @@
 [submodule "vim/.vim/bundle/minibufexpl"]
 	path = vim/.vim/bundle/minibufexpl
 	url = git://github.com/fholgado/minibufexpl.vim.git
+        ignore = dirty
 [submodule "vim/.vim/bundle/vim-easymotion"]
 	path = vim/.vim/bundle/vim-easymotion
 	url = git://github.com/Lokaltog/vim-easymotion.git
@@ -70,3 +71,4 @@
 [submodule "vim/.vim/bundle/easygrep"]
 	path = vim/.vim/bundle/easygrep
 	url = git://github.com/jcf/easygrep.vim.git
+        ignore = dirty
