--- a/.gitmodules
+++ b/.gitmodules
@@ -68,3 +68,6 @@
 	path = vim/.vim/bundle/easygrep
 	url = git://github.com/jcf/easygrep.vim.git
         ignore = dirty
+[submodule "vim/.vim/bundle/base16-vim"]
+	path = vim/.vim/bundle/base16-vim
+	url = https://github.com/chriskempson/base16-vim.git
