--- a/.gitmodules
+++ b/.gitmodules
@@ -71,3 +71,6 @@
 [submodule "vim/.vim/bundle/base16-vim"]
 	path = vim/.vim/bundle/base16-vim
 	url = https://github.com/chriskempson/base16-vim.git
+[submodule "vim/.vim/bundle/scratch"]
+	path = vim/.vim/bundle/scratch
+	url = git://github.com/vim-scripts/scratch.vim.git
