--- a/.gitmodules
+++ b/.gitmodules
@@ -71,3 +71,6 @@
 [submodule "vim/.vim/bundle/scratch"]
 	path = vim/.vim/bundle/scratch
 	url = git://github.com/vim-scripts/scratch.vim.git
+[submodule "vim/.vim/bundle/buffet"]
+	path = vim/.vim/bundle/buffet
+	url = git://github.com/sandeepcr529/Buffet.vim.git
