--- a/.gitmodules
+++ b/.gitmodules
@@ -74,3 +74,6 @@
 [submodule "vim/.vim/bundle/buffet"]
 	path = vim/.vim/bundle/buffet
 	url = git://github.com/sandeepcr529/Buffet.vim.git
+[submodule "vim/.vim/bundle/conque-shell"]
+	path = vim/.vim/bundle/conque-shell
+	url = git://github.com/vim-scripts/Conque-Shell.git
