Fix escape key delay

--- a/debian/.tmux.conf
+++ b/debian/.tmux.conf
@@ -1,4 +1,5 @@
-set-option -g prefix C-n
+set -g prefix C-a
+unbind-key C-b
 
 set -g base-index 1
 
@@ -15,3 +16,5 @@ bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
 
 bind-key -t vi-copy 'y' copy-selection
+
+set -s escape-time 0
