--- a/debian/.tmux.conf
+++ b/debian/.tmux.conf
@@ -14,22 +14,24 @@ bind-key -t vi-copy 'y' copy-selection
 
 set -s escape-time 0
 
+set -g default-terminal "screen-256color"
+
 # status bar colors
-set -g status-bg black
+set -g status-bg colour8
 set -g status-fg white
 
 # alignment settings
-# set-option -g status-justify centre
+set-option -g status-justify centre
 
 # status left options
-set-option -g status-left '#[fg=green][#[bg=black,fg=cyan]#S#[fg=green]]'
+set-option -g status-left '#[fg=default][#[bg=default,fg=default]#S#[fg=default]]'
 set-option -g status-left-length 20
 
 # window list options
 setw -g automatic-rename on
-set-window-option -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[default]#W#[fg=grey,dim]#F'
-set-window-option -g window-status-current-format '#[bg=blue,fg=cyan,bold]#I#[bg=blue,fg=cyan]:#[fg=colour230]#W#[fg=dim]#F'
+set-window-option -g window-status-format '#[fg=default,dim]#I#[fg=default]:#[default]#W#[fg=grey,dim]#F'
+set-window-option -g window-status-current-format '#[bg=blue,fg=default,bold]#I#[bg=blue,fg=default]:#[fg=colour230]#W#[fg=dim]#F'
 set -g base-index 1
 
 # status right options
-set -g status-right '#[fg=green][#[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]]'
+set -g status-right '[#[fg=default]%H:%M#[default]]'
