--- a/debian/.tmux.conf
+++ b/debian/.tmux.conf
@@ -6,15 +6,30 @@ set -g base-index 1
 setw -g mode-keys vi
 
 unbind [
-
 bind Escape copy-mode
-
 unbind p
-
 bind p paste-buffer
-
 bind-key -t vi-copy 'v' begin-selection
-
 bind-key -t vi-copy 'y' copy-selection
 
 set -s escape-time 0
+
+# status bar colors
+set -g status-bg black
+set -g status-fg white
+
+# alignment settings
+# set-option -g status-justify centre
+
+# status left options
+set-option -g status-left '#[fg=green][#[bg=black,fg=cyan]#S#[fg=green]]'
+set-option -g status-left-length 20
+
+# window list options
+setw -g automatic-rename on
+set-window-option -g window-status-format '#[fg=cyan,dim]#I#[fg=blue]:#[default]#W#[fg=grey,dim]#F'
+set-window-option -g window-status-current-format '#[bg=blue,fg=cyan,bold]#I#[bg=blue,fg=cyan]:#[fg=colour230]#W#[fg=dim]#F'
+set -g base-index 1
+
+# status right options
+set -g status-right '#[fg=green][#[fg=blue]%Y-%m-%d #[fg=white]%H:%M#[default]]'
