--- a/.gitmodules
+++ b/.gitmodules
@@ -92,3 +92,6 @@
 [submodule "vim/.vim/bundle/vim-racket"]
 	path = vim/.vim/bundle/vim-racket
 	url = https://github.com/wlangstroth/vim-racket.git
+[submodule "vim/.vim/bundle/paredit"]
+	path = vim/.vim/bundle/paredit
+	url = https://github.com/vim-scripts/paredit.vim.git
