--- a/.gitmodules
+++ b/.gitmodules
@@ -95,3 +95,6 @@
 [submodule "vim/.vim/bundle/paredit"]
 	path = vim/.vim/bundle/paredit
 	url = https://github.com/vim-scripts/paredit.vim.git
+[submodule "vim/.vim/bundle/sass-compile"]
+	path = vim/.vim/bundle/sass-compile
+	url = https://github.com/AtsushiM/sass-compile.vim.git
