let tmux yank into system clipboard

--- a/debian/.tmux.conf
+++ b/debian/.tmux.conf
@@ -10,7 +10,7 @@ bind Escape copy-mode
 unbind p
 bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-selection
+bind-key -t vi-copy 'y' copy-pipe "xclip -sel clip -i >/dev/null"
 
 set -s escape-time 0
 
