--- a/debian/.tmux.conf
+++ b/debian/.tmux.conf
@@ -10,28 +10,8 @@ bind Escape copy-mode
 unbind p
 bind p paste-buffer
 bind-key -t vi-copy 'v' begin-selection
-bind-key -t vi-copy 'y' copy-pipe "xclip -sel clip -i >/dev/null"
+# bind-key -t vi-copy 'y' copy-pipe "xclip -sel clip -i >/dev/null"
 
 set -s escape-time 0
 
 set -g default-terminal "screen-256color"
-
-# status bar colors
-set -g status-bg colour8
-set -g status-fg white
-
-# alignment settings
-set-option -g status-justify centre
-
-# status left options
-set-option -g status-left '#[fg=default][#[bg=default,fg=default]#S#[fg=default]]'
-set-option -g status-left-length 20
-
-# window list options
-setw -g automatic-rename on
-set-window-option -g window-status-format '#[fg=default,dim]#I#[fg=default]:#[default]#W#[fg=grey,dim]#F'
-set-window-option -g window-status-current-format '#[bg=blue,fg=default,bold]#I#[bg=blue,fg=default]:#[fg=colour230]#W#[fg=dim]#F'
-set -g base-index 1
-
-# status right options
-set -g status-right '[#[fg=default]%H:%M#[default]]'
