--- a/debian/.tmux.conf
+++ b/debian/.tmux.conf
@@ -14,4 +14,7 @@ bind-key -t vi-copy 'v' begin-selection
 
 set -s escape-time 0
 
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
+
+set -g status-bg colour12
+set -g status-fg white
