--- a/debian/.vimperatorrc
+++ b/debian/.vimperatorrc
@@ -1,2 +1,2 @@
 set hintchars=sadfjklewcmpgh
-highlight Hint font-family: monospace; font-size: 120%; font-weight: bold; text-transform: uppercase; color: white; background-color: red; border-color: ButtonShadow; border-width: 0px; border-style: solid; padding: 0px 1px 0px 1px;
+highlight Hint font-family: monospace; font-size: 10pt; font-weight: bold; text-transform: uppercase; color: white; background-color: red; border-color: ButtonShadow; border-width: 0px; border-style: solid; padding: 0px 1px 0px 1px;
