ignore dirty submodules

--- a/.gitmodules
+++ b/.gitmodules
@@ -89,12 +89,14 @@
 [submodule "vim/.vim/bundle/paredit"]
 	path = vim/.vim/bundle/paredit
 	url = https://github.com/vim-scripts/paredit.vim.git
+        ignore = dirty
 [submodule "vim/.vim/bundle/vim-noctu"]
 	path = vim/.vim/bundle/vim-noctu
 	url = git://github.com/noahfrederick/vim-noctu.git
 [submodule "vim/.vim/bundle/vim-clojure-static"]
 	path = vim/.vim/bundle/vim-clojure-static
 	url = https://github.com/guns/vim-clojure-static.git
+        ignore = dirty
 [submodule "vim/.vim/bundle/vim-fireplace"]
 	path = vim/.vim/bundle/vim-fireplace
 	url = https://github.com/tpope/vim-fireplace.git
