try to gitignore bundle directory

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-vim/.vim/bundle/slimv
 vim/.vim/.netrwhist
 vim/.vim/bundle/conque-shell/doc/tags
 debian/bin/chromedriver
 debian/bin/work
 debian/bin/phantomjs
+vim/.vim/bundle/
