--- a/linux/.vimperatorrc
+++ b/linux/.vimperatorrc
@@ -1,6 +1,6 @@
 set hintchars=sadfjklewcmpgh
 
-highlight Hint font-family: monospace; font-size: 10pt; font-weight: bold; text-transform: uppercase; color: white; background-color: red; border-color: ButtonShadow; border-width: 0px; border-style: solid; padding: 0px 1px 0px 1px;
+highlight Hint -append font-size:180%;
 
 noremap j 3j
 noremap k 3k
