--- a/linux/.tmux.conf
+++ b/linux/.tmux.conf
@@ -1,20 +1,57 @@
-set -g prefix C-l
-unbind-key C-b
-
-set -g base-index 1
-
 setw -g mode-keys vi
 
-unbind [
-bind Escape copy-mode
-unbind p
-bind p paste-buffer
-bind-key -t vi-copy 'v' begin-selection
-# bind-key -t vi-copy 'y' copy-pipe "xclip -sel clip -i >/dev/null"
+set -g prefix C-a
+bind C-a last-window
 
-set -s escape-time 0
+# remap switching windows
+bind C-f next-window
+bind C-b previous-window
 
-set -g default-terminal "screen-256color"
+# visual key bindings like in vi# use of ` instead of Ctrl+b
+bind -t vi-copy 'v' begin-selection
+bind -t vi-copy 'y' copy-selection
 
+# start numbering of windows with 1
+set -g base-index 1
+
+# Set status bar
 set -g status-bg colour8
 set -g status-fg white
+
+# Highlight active window
+set -g window-status-current-bg red
+set -g window-status-current-attr bold
+
+# Highlight last window
+set -g window-status-last-style fg=yellow,bold
+
+# set the position of the window list component
+set -g status-justify centre
+
+# set the maximum of the left component of the status bar
+set -g status-left-length 20
+
+# display string to the right using strftime
+set -g status-right '[%R]'
+
+# List of plugins
+# Supports `github_username/repo` or full git repo URLs
+set -g @tpm_plugins '              \
+  tmux-plugins/tpm                 \
+  tmux-plugins/tmux-sensible       \
+  tmux-plugins/tmux-resurrect      \
+'
+# Other examples:
+# github_username/plugin_name    \
+# git@github.com/user/plugin     \
+# git@bitbucket.com/user/plugin  \
+
+# vi keys
+set -g status-keys vi
+
+set -g @resurrect-save 'S'
+set -g @resurrect-restore 'R'
+
+# Initializes TMUX plugin manager.
+# Keep this line at the very bottom of tmux.conf.
+run-shell '~/.tmux/plugins/tpm/tpm'
