tmux yank & save history

--- a/linux/.tmux.conf
+++ b/linux/.tmux.conf
@@ -9,7 +9,8 @@ bind C-b previous-window
 
 # visual key bindings like in vi# use of ` instead of Ctrl+b
 bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+# uncommented because of tmux-yank plugin
+# bind -t vi-copy 'y' copy-selection
 
 # start numbering of windows with 1
 set -g base-index 1
@@ -40,6 +41,7 @@ set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
   tmux-plugins/tmux-sensible       \
   tmux-plugins/tmux-resurrect      \
+  tmux-plugins/tmux-yank           \
 '
 # Other examples:
 # github_username/plugin_name    \
@@ -51,6 +53,8 @@ set -g status-keys vi
 
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
+
+set -g @resurrect-save-bash-history 'on'
 
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
