--- a/linux/.tmux.conf
+++ b/linux/.tmux.conf
@@ -3,6 +3,8 @@ setw -g mode-keys vi
 set -g prefix C-a
 bind C-a last-window
 
+bind c new-window -c "#{pane_current_path}"
+
 # remap switching windows
 bind C-f next-window
 bind C-b previous-window
