vim & tmux & sessions

--- a/linux/.tmux.conf
+++ b/linux/.tmux.conf
@@ -58,6 +58,8 @@ set -g @resurrect-restore 'R'
 
 set -g @resurrect-save-bash-history 'on'
 
+set -g @resurrect-processes 'false'
+
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
 run-shell '~/.tmux/plugins/tpm/tpm'
