--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -9,7 +9,11 @@ bind c new-window -c "#{pane_current_path}"
 bind C-f next-window
 bind C-b previous-window
 
-# visual key bindings like in vi# use of ` instead of Ctrl+b
+# better visual mode and copy-paste
+unbind [
+bind v copy-mode
+unbind p
+bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
 # uncommented because of tmux-yank plugin
 # bind -t vi-copy 'y' copy-selection
