--- a/dotfiles/.gitignore
+++ b/dotfiles/.gitignore
@@ -1,6 +1,4 @@
-vim/.vim/.netrwhist
-vim/.vim/bundle/conque-shell/doc/tags
-debian/bin/chromedriver
-debian/bin/work
-debian/bin/phantomjs
-vim/.vim/bundle/*
+Session.vim
+*/**/tags
+rerun_personas_migrations_100
+plugin/ri_vim_cache/
