--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -33,10 +33,10 @@ set -g window-status-current-attr bold
 set -g window-status-last-style fg=yellow,bold
 
 # set the position of the window list component
-set -g status-justify centre
+# set -g status-justify centre
 
 # set the maximum of the left component of the status bar
-set -g status-left-length 20
+set -g status-left-length 50
 
 # display string to the right using strftime
 set -g status-right '[%R]'
