--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,22 +1,26 @@
 setw -g mode-keys vi
 
-set -g prefix C-a
-bind C-a last-window
+set -sg escape-time 0
+
+set -g prefix C-n
+
+# bind C-n previous-window
+# bind C-p next-window
+# bind C-l last-window
 
 bind c new-window -c "#{pane_current_path}"
 
 # remap switching windows
-bind C-f next-window
-bind C-b previous-window
+# bind C-f next-window
+# bind C-b previous-window
 
 # better visual mode and copy-paste
-unbind [
-bind v copy-mode
-unbind p
-bind p paste-buffer
+# unbind [
+# bind v copy-mode
+# unbind p
+# bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
-# uncommented because of tmux-yank plugin
-# bind -t vi-copy 'y' copy-selection
+bind -t vi-copy 'y' copy-selection
 
 # start numbering of windows with 1
 set -g base-index 1
@@ -39,7 +43,7 @@ set -g window-status-last-style fg=yellow,bold
 set -g status-left-length 50
 
 # display string to the right using strftime
-set -g status-right '[%R]'
+set -g status-right ''
 
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
