--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -4,23 +4,24 @@ set -sg escape-time 0
 
 set -g prefix C-n
 
+set -g mouse on
+
 # bind C-n previous-window
 # bind C-p next-window
 # bind C-l last-window
 
 bind c new-window -c "#{pane_current_path}"
+bind-key % split-window -h -c "#{pane_current_path}"
+bind-key '"' split-window -v -c "#{pane_current_path}"
 
 # remap switching windows
 # bind C-f next-window
 # bind C-b previous-window
 
-# better visual mode and copy-paste
-# unbind [
-# bind v copy-mode
-# unbind p
-# bind p paste-buffer
 bind -t vi-copy 'v' begin-selection
-bind -t vi-copy 'y' copy-selection
+# copying and pasting using system clipboard
+bind -t vi-copy 'y' copy-pipe 'pbcopy'
+bind ] run-shell "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
 
 # start numbering of windows with 1
 set -g base-index 1
