--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -8,14 +8,15 @@ set -g mouse on
 
 set -g focus-events on
 
-bind m set -g mouse on
-bind M set -g mouse off
+# conflicts with default mark pane
+# bind m set -g mouse on
+# bind M set -g mouse off
 
 # bind C-n previous-window
 # bind C-p next-window
 # bind C-l last-window
 
-bind c new-window -c "#{pane_current_path}"
+bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -v -c "#{pane_current_path}"
 
@@ -23,20 +24,17 @@ bind-key '"' split-window -v -c "#{pane_current_path}"
 # bind C-f next-window
 # bind C-b previous-window
 
-bind -t vi-copy 'v' begin-selection
+bind-key -T copy-mode-vi v send-keys -X begin-selection
 
 # copying and pasting using system clipboard
-bind -t vi-copy 'y' copy-pipe 'pbcopy'
-
-# Update default binding of `Enter` to also use copy-pipe
-unbind -t vi-copy Enter
-bind-key -t vi-copy Enter copy-pipe "pbcopy"
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # and mouse selection uses copy-pipe too
-bind-key -t vi-copy MouseDragEnd1Pane copy-pipe "pbcopy"
+bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # and pasting from clipboard via pbpaste
-bind ] run-shell "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
+# bind ] run-shell "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
+bind-key ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # start numbering of windows with 1
 set -g base-index 1
@@ -83,6 +81,10 @@ set -g @resurrect-restore 'R'
 set -g @resurrect-save-bash-history 'on'
 
 set -g @resurrect-processes 'false'
+
+# workaround for regression in Mac OSX Sierra in regards to broken clipboard
+set -g default-shell $SHELL 
+set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
