--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -16,6 +16,8 @@ set -g focus-events on
 # bind C-p next-window
 # bind C-l last-window
 
+bind s choose-tree -Ns
+
 bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -v -c "#{pane_current_path}"
@@ -30,7 +32,7 @@ bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # and mouse selection uses copy-pipe too
-bind-key -T copy-mode MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 
 # and pasting from clipboard via pbpaste
 # bind ] run-shell "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
