solarized dark setup

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,20 +1,11 @@
 setw -g mode-keys vi
-
+set -g status-keys vi
 set -sg escape-time 0
-
-set -g prefix C-n
-
+set -g prefix C-space
 set -g mouse on
-
 set -g focus-events on
-
-# conflicts with default mark pane
-# bind m set -g mouse on
-# bind M set -g mouse off
-
-# bind C-n previous-window
-# bind C-p next-window
-# bind C-l last-window
+# enables cursor shape change in nvim insert mode
+set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 bind s choose-tree -Ns
 
@@ -22,51 +13,35 @@ bind-key c new-window -c "#{pane_current_path}"
 bind-key % split-window -h -c "#{pane_current_path}"
 bind-key '"' split-window -v -c "#{pane_current_path}"
 
-# remap switching windows
-# bind C-f next-window
-# bind C-b previous-window
-
 bind-key -T copy-mode-vi v send-keys -X begin-selection
-
 # copying and pasting using system clipboard
 bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-
 # and mouse selection uses copy-pipe too
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
-
 # and pasting from clipboard via pbpaste
-# bind ] run-shell "tmux set-buffer \"$(pbpaste)\"; tmux paste-buffer"
 bind-key ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # start numbering of windows with 1
 set -g base-index 1
 
 # Set status bar
-set -g status-bg colour8
-set -g status-fg white
-
+# set -g status-bg colour8
+# set -g status-fg white
 # Highlight active window
-set -g window-status-current-bg red
-set -g window-status-current-attr bold
-
+# set -g window-status-current-bg red
+# set -g window-status-current-attr bold
 # Highlight last window
-set -g window-status-last-style fg=yellow,bold
-
-# set the position of the window list component
-# set -g status-justify centre
-
+# set -g window-status-last-style fg=yellow,bold
 # set the maximum of the left component of the status bar
 set -g status-left-length 50
-
-# display string to the right using strftime
-set -g status-right ''
 
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
 set -g @tpm_plugins '              \
   tmux-plugins/tpm                 \
-  tmux-plugins/tmux-sensible       \
+  tmux-plugins/tmux-continuum      \
   tmux-plugins/tmux-resurrect      \
+  tmux-plugins/tmux-sensible       \
   tmux-plugins/tmux-yank           \
 '
 # Other examples:
@@ -74,14 +49,11 @@ set -g @tpm_plugins '              \
 # git@github.com/user/plugin     \
 # git@bitbucket.com/user/plugin  \
 
-# vi keys
-set -g status-keys vi
-
+set -g @continuum-restore 'on'
+set -g @continuum-save-interval '60'
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
-
-set -g @resurrect-save-bash-history 'on'
-
+# set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-processes 'false'
 
 # workaround for regression in Mac OSX Sierra in regards to broken clipboard
@@ -91,3 +63,6 @@ set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
 run-shell '~/.tmux/plugins/tpm/tpm'
+
+# Fixes iterm2 integration. Should go after "run '~/.tmux/plugins/tpm/tpm'"
+setw -g aggressive-resize off
