--- a/dotfiles/.inputrc
+++ b/dotfiles/.inputrc
@@ -1,6 +1,12 @@
 set editing-mode vi
-set keymap vi
-set convert-meta on
+
+# Completion Options
+# set page-completions on
 # set completion-ignore-case on
-set show-all-if-ambiguous on
+# set completion-query-items 200
+# set show-all-if-ambiguous on
+# set show-all-if-unmodified on
+# set visible-stats on
+
+# set keymap vi-insert
 # TAB: menu-complete
