--- a/dotfiles/.inputrc
+++ b/dotfiles/.inputrc
@@ -1,12 +1,8 @@
 set editing-mode vi
+set show-mode-in-prompt on
+set vi-ins-mode-string \1\e[5 q\2
+set vi-cmd-mode-string \1\e[2 q\2
 
-# Completion Options
-# set page-completions on
-# set completion-ignore-case on
-# set completion-query-items 200
-# set show-all-if-ambiguous on
-# set show-all-if-unmodified on
-# set visible-stats on
-
-# set keymap vi-insert
-# TAB: menu-complete
+# Enable Readline not waiting for additional input when a key is pressed.
+# Needed for the mappings below.
+set keyseq-timeout 50
