--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,11 +1,15 @@
+set -g default-shell "/usr/local/bin/bash"
+set -g default-command "/usr/local/bin/bash"
+
 setw -g mode-keys vi
 set -g status-keys vi
 set -sg escape-time 0
 set -g prefix C-space
 set -g mouse on
 set -g focus-events on
+
 # enables cursor shape change in nvim insert mode
-set -g -a terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
+set -ga terminal-overrides ',*:Ss=\E[%p1%d q:Se=\E[2 q'
 
 bind s choose-tree -Ns
 
@@ -23,23 +27,21 @@ bind-key ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux 
 
 # start numbering of windows with 1
 set -g base-index 1
+# start numbering of panes with 1
+setw -g pane-base-index 1
 
-# Set status bar
-# set -g status-bg colour8
-# set -g status-fg white
 # Highlight active window
 # set -g window-status-current-bg red
-# set -g window-status-current-attr bold
 # Highlight last window
-# set -g window-status-last-style fg=yellow,bold
+set -g window-status-last-style fg=default,italics
 # set the maximum of the left component of the status bar
 set -g status-left-length 50
 
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
 set -g @tpm_plugins '              \
+  seebi/tmux-colors-solarized      \
   tmux-plugins/tpm                 \
-  tmux-plugins/tmux-continuum      \
   tmux-plugins/tmux-resurrect      \
   tmux-plugins/tmux-sensible       \
   tmux-plugins/tmux-yank           \
@@ -49,12 +51,12 @@ set -g @tpm_plugins '              \
 # git@github.com/user/plugin     \
 # git@bitbucket.com/user/plugin  \
 
-set -g @continuum-restore 'on'
-set -g @continuum-save-interval '60'
-set -g @resurrect-save 'S'
-set -g @resurrect-restore 'R'
-# set -g @resurrect-save-bash-history 'on'
+set -g @colors-solarized 'light'
 set -g @resurrect-processes 'false'
+set -g @resurrect-restore 'R'
+set -g @resurrect-save 'S'
+set -g @resurrect-save-bash-history 'on'
+set -g @resurrect-strategy-nvim 'session'
 
 # workaround for regression in Mac OSX Sierra in regards to broken clipboard
 set -g default-shell $SHELL 
@@ -65,4 +67,9 @@ set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 run-shell '~/.tmux/plugins/tpm/tpm'
 
 # Fixes iterm2 integration. Should go after "run '~/.tmux/plugins/tpm/tpm'"
-setw -g aggressive-resize off
+# setw -g aggressive-resize off
+
+# override seebi/tmux-colors-solarized
+# set -g @colors-solarized 'light'
+# set -g pane-border-fg default
+# set -g pane-active-border-fg default
