--- a/dotfiles/.inputrc
+++ b/dotfiles/.inputrc
@@ -1,7 +1,7 @@
 set editing-mode vi
-set show-mode-in-prompt on
-set vi-ins-mode-string \1\e[5 q\2
-set vi-cmd-mode-string \1\e[2 q\2
+# set show-mode-in-prompt on
+# set vi-ins-mode-string "(ins) "
+# set vi-cmd-mode-string "(cmd) "
 
 # Enable Readline not waiting for additional input when a key is pressed.
 # Needed for the mappings below.
