--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,5 +1,5 @@
-set -g default-shell "/usr/local/bin/bash"
-set -g default-command "/usr/local/bin/bash"
+# set -g default-shell "/usr/local/bin/bash"
+# set -g default-command "/usr/local/bin/bash"
 
 setw -g mode-keys vi
 set -g status-keys vi
@@ -23,7 +23,8 @@ bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "reattach-to-user-n
 # and mouse selection uses copy-pipe too
 bind-key -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
 # and pasting from clipboard via pbpaste
-bind-key ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
+bind-key ] run "pbpaste | tmux load-buffer - && tmux paste-buffer"
+# bind-key ] run "reattach-to-user-namespace pbpaste | tmux load-buffer - && tmux paste-buffer"
 
 # start numbering of windows with 1
 set -g base-index 1
@@ -39,28 +40,28 @@ set -g status-left-length 50
 
 # List of plugins
 # Supports `github_username/repo` or full git repo URLs
-set -g @tpm_plugins '              \
-  seebi/tmux-colors-solarized      \
-  tmux-plugins/tpm                 \
-  tmux-plugins/tmux-resurrect      \
-  tmux-plugins/tmux-sensible       \
-  tmux-plugins/tmux-yank           \
+set -g @tpm_plugins '                    \
+  seebi/tmux-colors-solarized            \
+  tmux-plugins/tpm                       \
+  tmux-plugins/tmux-resurrect            \
+  tmux-plugins/tmux-sensible             \
+  tmux-plugins/tmux-yank                 \
 '
 # Other examples:
 # github_username/plugin_name    \
 # git@github.com/user/plugin     \
 # git@bitbucket.com/user/plugin  \
 
-set -g @colors-solarized 'light'
+set -g @colors-solarized 'dark'
 set -g @resurrect-processes 'false'
 set -g @resurrect-restore 'R'
 set -g @resurrect-save 'S'
-set -g @resurrect-save-bash-history 'on'
+# set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-strategy-nvim 'session'
 
 # workaround for regression in Mac OSX Sierra in regards to broken clipboard
-set -g default-shell $SHELL 
-set -g default-command "reattach-to-user-namespace -l ${SHELL}"
+# set -g default-shell $SHELL 
+# set -g default-command "reattach-to-user-namespace -l ${SHELL}"
 
 # Initializes TMUX plugin manager.
 # Keep this line at the very bottom of tmux.conf.
